# shared-models

./: README.md  hello.txt  pyproject.toml
shared/: __init__.py  database.py  utils.py
shared/models/: __init__.py  base.py  class_unit.py  mixins.py  parent.py  staff.py  student.py  tables.py
