[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school-shared-models"
version = "0.1.0"
description = "Shared database models for school projects"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
dependencies = [
    "sqlalchemy>=2.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/zuox4/shared-models"
Repository = "https://github.com/zuox4/shared-models.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
